[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=3.2.1",
    "litellm>=1.72.6",
    "mem0ai>=0.1.109",
    "openai-agents[litellm]>=0.0.18",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
]
