[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langfuse>=3.2.1",
    "litellm>=1.72.6",
    "mem0ai>=0.1.109",
    "ollama>=0.5.3",
    "openai-agents[litellm]>=0.0.18",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
]
